--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -26,8 +26,8 @@
 
         {# If you want to control the URL the user is redirected to on success
         <input type="hidden" name="_target_path" value="/account"> #}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-        <button class="border-none bg-teal-500 py-2 px-3 text-white roudend-sm w-full mt-2 rounded-md hover:bg-teal-500 mb-5" type="submit">login</button>
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"><a href="{{ path('app_game')}}">
+         <button class="border-none bg-teal-500 py-2 px-3 text-white roudend-sm w-full mt-2 rounded-md hover:bg-teal-500 mb-5" type="submit">Valider</a></button>
     </form>
 
       </div>
